# reverso_env

./: .gitignore  README.md  pyproject.toml
data/uci_har/: README.md  metadata.json  stats.json
src/: README.md
src/reverso/: __init__.py
src/reverso/data/: __init__.py  augmentation.py  constants.py  dataset.py
src/reverso/models/: __init__.py  config.py  reverso.py
src/reverso/training/: __init__.py  config.py  metrics.py  train.py  visualization.py
tests/: test_smoke.py
