[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reverso"
version = "0.1.0"
description = "Machine learning project scaffolding for Reverso."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16",
    "ipykernel>=7.2",
    "matplotlib>=3.10",
    "numpy>=1.26,<2",
    "torch>=2.11",
]

[project.optional-dependencies]
gpu = [
    "flash-linear-attention>=0.3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
